...
        .padding(EdgeInsets(top: 10.0, leading: 10.0, bottom: 10.0, trailing: 10.0))
        .frame(width: 95, height: 95)
        .foregroundColor(Color(hex:StaticData.text_col[0]))
        .overlay(RoundedRectangle(cornerRadius: 50)
          .stroke(Color(hex:StaticData.text_col[0]), lineWidth: 2)
        )
        .accessibilityIdentifier("settings")
    })
    .background(Color(hex:StaticData.settings_col[0]))
    .cornerRadius(50)
  }
}
//[Login Button]---------------------------------
...
      .frame(maxWidth: .infinity)
      .padding(.horizontal,6)
      .overlay(RoundedRectangle(cornerRadius: 5)
        .stroke(Color(hex:StaticData.text_col[0]), lineWidth: 2)
      )
      .background(Color(hex:StaticData.bg1_col[0]))
      .accessibilityIdentifier("studentnameinput")
  }
}
//[Save key]---------------------------------
struct PlainButton: View {
  var text: String
  var action: (() -> Void)
...
      .frame(maxWidth: .infinity)
      .padding(.horizontal,6)
      .overlay(RoundedRectangle(cornerRadius: 5)
        .stroke(Color(hex:StaticData.text_col[0]), lineWidth: 2)
      )
      .background(Color(hex:StaticData.bg1_col[0]))
      .accessibilityIdentifier("imagename")
  }
}
//[DeleteTeacher key]---------------------------------
struct DeleteTeacherButton: View {
  var text: String
  var action: (() -> Void)
...
    .pickerStyle(.menu)
    .accentColor(Color(hex:StaticData.text_col[0]))
    .frame(height: 40, alignment: .center)
    .frame(maxWidth: .infinity)
    .background(Color(hex:StaticData.bg1_col[0]))
    .border(Color(hex:StaticData.text_col[0]))
    .accessibilityIdentifier("boardpicker")
  }
}

