...
      Text(text)
        .lineLimit(1)
        .foregroundColor(Color(hex:StaticData.text_col[GlobalVars.get().colorSet]))
        .font(.system(size: 35, weight: .heavy))
        .padding(.trailing, -5.0)
        .environment(\.layoutDirection,.rightToLeft)
        .accessibilityIdentifier("textbox")
    }.frame(maxWidth: .infinity, minHeight: 80, alignment: .trailing)
      .padding(.horizontal)
      .overlay(RoundedRectangle(cornerRadius: 5)
        .stroke(Color(hex:StaticData.text_col[GlobalVars.get().colorSet]), lineWidth: 2))
      .cornerRadius(5)
  }
...
