...
            if alertMessage != "" { alert = true }
            pass = ""
          }
        })
        if login {
          TeacherLoginInput(placeholder: "הקלד סיסמה...", text: $pass)
            .accessibilityLabel("password")
        }
        HiddenButton().frame(maxWidth: .infinity)
        StudentPicker(array: students, onChange: {
          gVars.swapStudent(login: true)
          set = "a"
          subSet = 0
...
